# CMakeNvcpkg

Ex002/: main.cpp
Ex002/Lib/src/: tmath.cpp
Ex003/: CMakeLists.txt  gen.bat
Ex003/Lib/: CMakeLists.txt
Ex003/Lib/include/: tmath.h
